--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             <br>
             CourseID: 
             <br>
-            <input type="text" name="CourseID" value="ELGE001"/>
+            <input type="text" name="CourseCode" value="ELGE001"/>
             <br>
             <br>
             <input type="submit" value="submit"/>
