--- a/templates/score.html
+++ b/templates/score.html
@@ -13,7 +13,7 @@
   <body>
         <div class="container">
            <h2>UserID is {{ userid }}</h2>
-           <h2>CourseID is {{ courseid }}</h2>   
+           <h2>CourseID is {{ coursecode }}</h2>   
            <h2>Score is {{ score }}</h2> 
         </div>
 
