--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,9 @@
             <input type="text" name="UserId"/>
             <br>
             <br>
-            CourseID: 
+            CourseCode: 
             <br>
-            <input type="text" name="CourseCode" value="ELGE001"/>
+            <input type="text" name="CourseCode" value="SAMPLE001"/>
             <br>
             <br>
             <input type="submit" value="submit"/>
