--- a/templates/score.html
+++ b/templates/score.html
@@ -12,7 +12,7 @@
   </head>
   <body>
         <div class="container">
-           <h2>UserID is {{ userid }}</h2>
+           <h2>User is {{ userid }}</h2>
            <h2>CourseCode is {{ coursecode }}</h2>   
            <h2>Score is {{ score }}</h2> 
         </div>
